# markface

./: .env.example  .gitignore  EXEMPLO MATÉRIA PRIMA.xlsx  MATÉRIA PRIMA.docx  MODELO FLEXÍVEL MATÉRIA PRIMA.xlsx  README.md  README_SIMPLES.md  ROADMAP.md  SKILLS_COMPLETO.md  TAREFAS.MD  analyze_mdb.py  check_modalities.py  docker-compose.yml  extract_schema.py  output_schema_full.txt  package.json  render.yaml  run_supabase_migrations.py  target_schema.json  vercel.json  ~$TÉRIA PRIMA.docx
backend/: Dockerfile  alembic.ini  check_data.py  check_events_db.py  check_modalities.py  check_whatsapp_db.py  debug_chat.py  debug_product.py  pyproject.toml  requirements.txt  test_supabase.py  view_events.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_orders_and_inventory_movements.py  003_hardening.py  004_suppliers_raw_materials.py  005_add_last_unit_price.py  006_finance_purchases_add_finance_and_purchases.py  007_sales_modalities_add_sales_modalities_table.py  0446fef03381_add_fields_to_categories.py  0f024f5d9187_add_measurement_units_table.py  1e3427a7a585_add_is_on_website_to_products.py  41b9eceb14c2_link_materials_to_variants.py  82069c6acdd7_add_whatsapp_events_table.py  93582a768fd6_add_categories_and_customers.py  97f5c8124c1f_add_product_categories_and_site_config.py  (+3 more)
backend/app/: main.py
backend/app/core/: config.py  (+3 more)
backend/scripts/: add_product_images_migration.py  apply_migration.py  check_product_column.py  generate_migration.py  generate_new_template.py  migrate_products.py  migrate_v2_variations.py  seed_website_modality.py
(+157 files in other folders)
