[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "markface-hub"
version = "1.0.0"
description = "MarkFace Hub - API Foundation (Section 1)"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",

    # Database
    "sqlalchemy[asyncio]==2.0.30",
    "asyncpg==0.29.0",
    "alembic==1.13.1",

    # Pydantic
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1",
    "email-validator==2.1.1",

    # Auth / Security
    "bcrypt==4.1.3",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.9",

    # Task queue
    "celery[redis]==5.3.6",
    "redis==5.0.4",
    "flower==2.0.1",

    # Utilities
    "python-dotenv==1.0.1",
    "structlog==24.1.0",
    "httpx==0.27.0",
]

[project.optional-dependencies]
test = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.6",
    "pytest-cov==5.0.0",
    "httpx==0.27.0",
    "anyio==4.3.0",
    "aiosqlite==0.20.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["app/tests"]

[tool.coverage.run]
source = ["app"]
omit = ["app/tests/*", "app/scripts/*"]
